--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,5 @@
 ---
-title: "[title]"
-author: "[author]"
+title: "Big Data Tasks"
 date: "last updated: `r Sys.Date()`"
 output: 
     html_document:
@@ -12,57 +11,165 @@ output:
         fig_width: 9
         fig_height: 5
         fig_caption: true
-        code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(
-    echo = TRUE
-)
+knitr::opts_chunk$set(echo = TRUE)
 ```
-
-The R Markdown source for this report is available to explore in an interactive 
-RStudio session at [[your binder link]](https://mybinder.org/v2/gh/kkmann/quick-and-not-dirty-report/HEAD?urlpath=rstudio).
-
-
-# R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-# Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
-# Tables and Tabbing {.tabset}
-
-## A Fancy Table
 
 ```{r}
-DT::datatable(iris)
+# Load required packages for web scraping, text mining, and visualizing
+library(rvest)
+library(stringr)
+library(tidytext)
+library(tm)
+library(wordcloud)
+library(ggplot2)
+library(dplyr)
 ```
 
-## Another Fancy Table
+# Web Scraping
+
+## Specify the base URL of the website
 
 ```{r}
-DT::datatable(mtcars)
+base_url <- "https://www.tidytextmining.com"
 ```
 
+## Read the main webpage and extract links from the table of contents
 
+```{r}
+webpage <- read_html(base_url)
 
-# Session Info
+toc_links <- webpage %>%
+  html_nodes("nav a") %>%
+  html_attr("href")
 
-```{r session-info}
-pander::pander(sessionInfo(), compact = TRUE)
+toc_links <- toc_links[grepl("^/", toc_links)]
+page_urls <- paste0(base_url, toc_links)
+```
+
+## Scrape content from each page
+
+```{r}
+all_page_content <- list()
+
+for (full_url in page_urls) {
+  cat("Scraping content from:", full_url, "\n")
+  
+  webpage <- read_html(full_url)
+  
+  content_section <- html_nodes(webpage, css = "#content")
+  content_text <- html_text(content_section)
+  
+  cleaned_content <- str_replace_all(content_text, "<script.*?</script>|<style.*?</style>", "")
+  final_content <- str_squish(cleaned_content)
+  
+  all_page_content[[full_url]] <- final_content
+}
+```
+
+## Combine all scraped content into a single data frame, and count the total words
+
+```{r}
+all_content_df <- data.frame(page_url = names(all_page_content), content = unlist(all_page_content))
+
+total_word_count <- sum(nchar(all_content_df$content) - nchar(gsub("\\s+", "", all_content_df$content)))
+
+cat("\n")
+cat("Total word count:", total_word_count, "\n")
+```
+
+# Data Cleaning
+
+## Clean the corpus and create a term-document matrix
+
+```{r}
+corpus <- Corpus(VectorSource(all_content_df$content))
+corpus <- tm_map(corpus, content_transformer(tolower))
+corpus <- tm_map(corpus, removePunctuation)
+corpus <- tm_map(corpus, removeNumbers)
+corpus <- tm_map(corpus, removeWords, stopwords("en"))
+
+tdm <- TermDocumentMatrix(corpus)
+m <- as.matrix(tdm)
+
+word_freq <- sort(rowSums(m), decreasing = TRUE)
+valid_words <- grep("^[a-zA-Z]+$", names(word_freq), value = TRUE)
+```
+
+# Visualization
+
+## Generate word cloud based on filtered word frequencies
+
+```{r}
+wordcloud(words = valid_words, freq = word_freq[valid_words], min.freq = 10, 
+          random.order = FALSE, colors = brewer.pal(8, "Dark2"))
+```
+
+## Create a bar plot for the top N words by frequency
+
+```{r}
+top_n <- 10
+top_words <- head(valid_words, n = top_n)
+word_counts <- word_freq[top_words]
+
+bar_data <- data.frame(word = top_words, frequency = word_counts)
+bar_data <- bar_data[order(-bar_data$frequency), ]
+
+ggplot(bar_data, aes(x = reorder(word, frequency), y = frequency)) +
+  geom_bar(stat = "identity") +
+  labs(title = paste("Top", top_n, "Words by Frequency"),
+       x = "Word", y = "Frequency") +
+  theme_minimal() +
+  coord_flip()
+```
+
+# Analysis
+
+## Perform sentiment analysis and visualize results
+
+```{r}
+corpus_tokens <- all_content_df %>%
+  mutate(content = tolower(content)) %>%
+  unnest_tokens(word, content) %>%
+  anti_join(stop_words)
+
+sentiment_scores <- corpus_tokens %>%
+  inner_join(get_sentiments("bing"), by = "word") %>%
+  count(word, sentiment) %>%
+  spread(sentiment, n, fill = 0) %>%
+  mutate(sentiment_score = positive - negative)
+
+top_sentiment_words <- sentiment_scores %>%
+  top_n(10, abs(sentiment_score)) %>%
+  mutate(word = reorder(word, sentiment_score))
+
+ggplot(top_sentiment_words, aes(x = word, y = sentiment_score, fill = sentiment_score > 0)) +
+  geom_bar(stat = "identity", show.legend = FALSE) +
+  scale_fill_manual(values = c("red", "green"), guide = FALSE) +
+  labs(title = "Sentiment Analysis (Top 10 Words)",
+       x = "Word", y = "Sentiment Score") +
+  theme_minimal() +
+  coord_flip()
+```
+
+## Extract bigrams from the corpus and visualize top bigrams
+
+```{r}
+bigrams <- corpus_tokens %>%
+  filter(!is.na(lead(word))) %>%
+  mutate(bigram = paste(word, lead(word), sep = " ")) %>%
+  count(bigram, sort = TRUE)
+
+top_bigrams <- bigrams %>%
+  filter(n > 10) %>%
+  slice_max(order_by = n, n = 10)
+
+ggplot(top_bigrams, aes(x = reorder(bigram, n), y = n)) +
+  geom_col() +
+  labs(title = "Top Bigrams",
+       x = "Bigram", y = "Frequency") +
+  theme_minimal() +
+  coord_flip()
 ```
